--- a/config/database.yml
+++ b/config/database.yml
@@ -19,8 +19,8 @@ development:
   encoding: unicode
   database: <%= Rails.application.config.settings.app_name %>_development
   pool: 5
-  username: postgres
-  password:
+  username: janaheimbring
+  password: password
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -48,13 +48,13 @@ test:
   encoding: unicode
   database: <%= Rails.application.config.settings.app_name %>_test
   pool: 5
-  username: postgres
-  password:
+  username: janaheimbring
+  password: password
 
 production:
   adapter: postgresql
   encoding: unicode
   database: <%= Rails.application.config.settings.app_name %>_production
   pool: 5
-  username: postgres
-  password:
+  username: janaheimbring
+  password: password
