--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - bundle config build.nokogiri --use-system-libraries
 before_script:
   - psql -c 'create database KoudokuTest_test' -U postgres
+  - bundle exec rake db:migrate
 script:
   - bundle exec rspec spec
 addons:
