--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: KoudokuTest_test
+  database: travis_ci_test
   pool: 5
   username: <%= ENV['TRAVIS'] ? 'postgres' : 'janaheimbring' %>
   password: <%= ENV['TRAVIS'] ? '' : 'password' %>
