--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ bundler_args: "--jobs=3 --retry=3 --deployment --without development production"
 before_install:
   - bundle config build.nokogiri --use-system-libraries
 before_script:
-  - psql -c 'create database KoudokuTest_test' -U postgres
+  - psql -c 'create database travis_ci_test' -U postgres
   - bundle exec rake db:migrate
 script:
   - bundle exec rspec spec
